--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@ rel="stylesheet">
 </head>
 <body>
     Demo project
+    <ul>
+        <li>First</li>
+        <li>Second</li>
+        <li>Third</li>
+    </ul>
+    <p>Copyrigth Netology</p>
 </body>
 </html>
