--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ rel="stylesheet">
 </head>
 <body>
     Demo project
+    <a href="news.html">News</a>
     <ul>
         <li>First</li>
         <li>Second</li>
